# notifie

./: .gitignore  CLAUDE.md  README.md
apps/notifie-client/: README.md  package.json
apps/notifie-client/src/: App.tsx
apps/notifie-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/notifie-client/src-tauri/capabilities/: default.json
apps/notifie-client/src-tauri/src/: lib.rs  main.rs
apps/notifie-client/src/components/: Settings.tsx
apps/notifie-client/src/hooks/: useNotification.ts  useWebSocket.ts
apps/notifie-server/: Cargo.toml  README.md  go.mod  go.sum  main.go
apps/notifie-server/handler/: notify.go
apps/notifie-server/hub/: client.go
apps/notifie-server/msg/: message.go
apps/notifie-server/src/: lib.rs  main.rs
apps/notifie-server/src/handler/: mod.rs  notify.rs
apps/notifie-server/src/hub/: client.rs  mod.rs
apps/notifie-server/src/model/: message.rs  mod.rs
apps/notifie-server/tests/: e2e.rs
docs/: design.md
docs/superpowers/plans/: 2026-03-24-notifie-client-implementation.md  2026-03-24-notifie-server-implementation.md  2026-03-26-notifie-rust-server-implementation.md
docs/superpowers/specs/: 2026-03-25-custom-notification-toast-design.md  2026-03-26-notifie-rust-server-design.md
