[package]
name = "notifie-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
futures-util = { version = "0.3", features = ["sink", "std"] }
uuid = { version = "1", features = ["v4"] }
